src/main/java/com/example/board/error/exception/ForbiddenException.java
package com.example.board.error.exception;

import com.example.board.error.ErrorCode;

public class ForbiddenException extends BusinessException {

    public ForbiddenException(String message, ErrorCode errorCode) {
        super(message, errorCode);
    }
}
